samples/_failures_safe/1761653189_1f71b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d35db336.c: In function ‘main’:
./samples/SAFE/__tmp_d35db336.c:156:5: error: expected ‘{’ at end of input
  156 |     struct
      |     ^~~~~~
./samples/SAFE/__tmp_d35db336.c:156:5: error: expected declaration or statement at end of input
